# aptcheckr

./: .gitignore  Cargo.toml  README.md
src/: check.rs  lib.rs  main.rs
