[package]
name = "aptcheckr"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["unstable-doc"] }
env_logger = "0.11.5"
futures = "0.3.31"
libapt = "1.0.0"
log = "0.4.22"
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
